# Ask-my-docs

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  build_demo.py  pyproject.toml  requirements-api.txt  requirements-ci.txt  requirements.txt  streamlit_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  eval.yml
.streamlit/: config.toml
data/eval/: golden_dataset.jsonl
data/raw/: README.txt
docker/: Dockerfile  docker-compose.yml
models/: demo_bm25.pkl
scripts/: evaluate.py  ingest.py
src/askdocs/: __init__.py  config.py
src/askdocs/api/: main.py  middleware.py  models.py  routes.py
src/askdocs/evaluation/: dataset.py  metrics.py  runner.py
src/askdocs/generation/: chain.py  llm.py  prompts.py
src/askdocs/ingestion/: chunker.py  loader.py  pipeline.py
src/askdocs/retrieval/: bm25_store.py  embedder.py  hybrid.py  reranker.py  vector_store.py
tests/integration/: test_pipeline.py
tests/unit/: test_chunker.py  test_hybrid.py  test_reranker.py
ui/: app.py
